@@ -1,1 +1,0 @@
-<script>history.go(-1);</script>
