@@ -1,0 +1,3 @@
+<?php
+
+header('HTTP/1.0 404 Not Found');
